--- a/index.html
+++ b/index.html
@@ -430,6 +430,9 @@ div.tocify {
     <li>
       <a href="110_SDMs_Integrating_Data_Types.html">3.2 Integrating data types in SDMS</a>
     </li>
+    <li>
+      <a href="111_SDM_Transfer.html">3.3 Extrapolating SDMS</a>
+    </li>
     <li class="divider"></li>
   </ul>
 </li>
